Bug 1028420 - Non-unified build fails when using --enable-warnings-as-errors - bustage fix, no review